# brain_tumor_classification

./: .editorconfig  .gitattributes  .gitignore  BTC_presentation.pptx  EDA.ipynb  README.md  app.py  features_extraction.py  pyproject.toml  requirements.txt  stacking_from_scratch.py  stacking_sklearn.py  test_basic.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.ipynb_checkpoints/: EDA-checkpoint.ipynb  KNN-checkpoint.ipynb  complete_scratch-Copy1-checkpoint.ipynb  complete_scratch-checkpoint.ipynb  general_models-checkpoint.ipynb
assets/: stylesheet.css
data/: brain_tumor_dataset.csv
notebooks/: eda.ipynb
src/brain_tumor_classification/: __init__.py  feature_extraction.py  paths.py  stacking_from_scratch.py  stacking_sklearn.py
tests/: test_basic.py
