[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-tumor-classification"
version = "0.1.0"
description = "Brain tumor classification with handcrafted texture features and stacking ensembles."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0.0",
  "matplotlib>=3.8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
